--- a/index.html
+++ b/index.html
@@ -10,6 +10,43 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+      <div>
+        <img src="assets/icons/List.svg" alt="Ícone de menu">
+        <strong>Menu</strong>
+      </div>
+      <div>
+        <img src="assets/icons/Logo.svg" alt="TechNews Logo">
+      </div>
+      <div>
+        <strong>Buscar</strong>
+        <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa para pesquisa">
+      </div>
+    </nav>
+
+    <nav id="secondary" class="grid grid-flow-col">
+      <a href="#">
+        Inteligência Artificial
+      </a>
+      <a href="#">
+        Block Chain
+      </a>
+      <a href="#">
+        Hologramas
+      </a>
+      <a href="#">
+        Internet
+      </a>
+      <a href="#">
+        Vestíveis
+      </a>
+      <a href="#">
+        Realidade Aumentada
+      </a>
+      <a href="#">
+        Realidade Virtual
+      </a>
+  </header>
 </body>
 </html>
