--- a/index.html
+++ b/index.html
@@ -48,5 +48,17 @@
         Realidade Virtual
       </a>
   </header>
+  <main class="grid container">
+    <section id="featured" class="grid grid-flow-col gap-16">
+      <div><img src="assets/images/Image 01.png" alt="Image 01"></div>
+      <div class="grid grid-cols-2 gap-16">
+        <div><img src="assets/images/Image 02.png" alt="Image 02"></div>
+        <div><img src="assets/images/Image 03.png" alt="Image 03"></div>
+        <div><img src="assets/images/Image 04.png" alt="Image 04"></div>
+        <div><img src="assets/images/Image 05.png" alt="Image 05"></div>
+      </div>
+    </div>
+  </section>
+  </main>
 </body>
 </html>
