--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </header>
   <main class="grid container">
     <section id="featured" class="grid grid-flow-col gap-16">
-      <div><img src="assets/images/Image 01.png" alt="Image 01"></div>
+      <div class="card"><img src="assets/images/Image 01.png" alt="Image 01"></div>
       <div class="grid grid-cols-2 gap-16">
         <div><img src="assets/images/Image 02.png" alt="Image 02"></div>
         <div><img src="assets/images/Image 03.png" alt="Image 03"></div>
