--- a/index.html
+++ b/index.html
@@ -50,12 +50,20 @@
   </header>
   <main class="grid container">
     <section id="featured" class="grid grid-flow-col gap-16">
-      <div class="card"><img src="assets/images/Image 01.png" alt="Image 01"></div>
+      <figure class="card">
+        <img src="assets/images/Image 01.png" alt="Image 01">
+        <figcaption>
+          <span class="content-tag">Robótica</span>
+          <h2 class="text-2xl">
+            Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.
+          </h2>
+        </figcaption>
+      </figure>
       <div class="grid grid-cols-2 gap-16">
-        <div><img src="assets/images/Image 02.png" alt="Image 02"></div>
-        <div><img src="assets/images/Image 03.png" alt="Image 03"></div>
-        <div><img src="assets/images/Image 04.png" alt="Image 04"></div>
-        <div><img src="assets/images/Image 05.png" alt="Image 05"></div>
+        <figure class="card"><img src="assets/images/Image 02.png" alt="Image 02"></figure>
+        <figure class="card"><img src="assets/images/Image 03.png" alt="Image 03"></figure>
+        <figure class="card"><img src="assets/images/Image 04.png" alt="Image 04"></figure>
+        <figure class="card"><img src="assets/images/Image 05.png" alt="Image 05"></figure>
       </div>
     </div>
   </section>
