--- a/index.html
+++ b/index.html
@@ -183,64 +183,58 @@
 
       </div>
     </section>
-      <div>
+      <aside>
         <div id="ads">
           <img src="assets/images/Ads.png" alt="">
         </div>
         <section id="more">
           <header class="grid grid-flow-col">
             <h3>Viu isso aqui?</h3>
-            <a href="#" class="grid grid-flow-col"></a>
-            <strong>Ver tudo</strong>
-            <span></span>
+            <a href="#" class="grid grid-flow-col">
+              <strong>Ver tudo</strong>
+              <span></span>
+            </a>
+            
           </header>
           <div class="grid gap32">
             <article class="grid grid-flow-col gap-16">
-              <div>
-                <span class="content-tag">Inteligência Artificial</span>
-                <h3 class="text-xl">Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h3>
-                <p class="text-sm">Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até plan...</p>
-              </div>
-              <div><img src="assets/images/Image 13.png" alt=""></div>
-            </article>
-            <article class="grid grid-flow-col gap-16">
+              <div><img src="assets/images/Image 14.png" alt=""></div>
               <div>
                 <span class="content-tag">Software</span>
-                <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...</h3>
+                <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e...</h3>
               </div>
-              <div><img src="assets/images/Image 14.png" alt=""></div>
             </article>
             <article class="grid grid-flow-col gap-16">
+              <div><img src="assets/images/Image 15.png" alt=""></div>
               <div>
                 <span class="content-tag">Realidade Virtual</span>
-                <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...</h3>
+                <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial...</h3>
               </div>
-              <div><img src="assets/images/Image 15.png" alt=""></div>
             </article>
             <article class="grid grid-flow-col gap-16">
+              <div><img src="assets/images/Image 16.png" alt=""></div>
               <div>
                 <span class="content-tag">Criptomoedas</span>
-                <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...</h3>
+                <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o...</h3>
               </div>
-              <div><img src="assets/images/Image 16.png" alt=""></div>
             </article>
             <article class="grid grid-flow-col gap-16">
+              <div><img src="assets/images/Image 17.png" alt=""></div>
               <div>
                 <span class="content-tag">Drones</span>
-                <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...</h3>
+                <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o...</h3>
               </div>
-              <div><img src="assets/images/Image 17.png" alt=""></div>
             </article>
             <article class="grid grid-flow-col gap-16">
+              <div><img src="assets/images/Image 18.png" alt=""></div>
               <div>
                 <span class="content-tag">Impressão 3d</span>
-                <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a lis...</h3>
+                <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a...</h3>
               </div>
-              <div><img src="assets/images/Image 18.png" alt=""></div>
             </article>
           </div>
         </section>
-      </div>
+      </aside>
   </main>
 </body>
 </html>
